--- a/style.css
+++ b/style.css
@@ -1,13 +1,38 @@
-body{
-  background-color:
-}
 #conteneur{
  display: flex;
  flex-direction: column;
  justify-content: space-around;
 }
-header {
+#primero {
+  background-color: #E6D2E0;
+  margin-bottom: 10px;
+  border: 4px solid #842167;
+  border-radius: 5px;
+  margin-top: 10px;
   display: flex;
+  text-decoration:none;
+  color: black;
+  margin-top: 20px;
+}
+#segundo {
+  background-color: #E6D2E0;
+  margin-bottom: 10px;
+  border: 4px solid #842167;
+  border-radius: 5px;
+  text-decoration:none;
+  color: black;
+}
+#tercero {
+  background-color: #E6D2E0;
+  margin-bottom: 10px;
+  border: 4px solid #842167;
+  border-radius: 5px;
+  text-decoration:none;
+  color: black;
+}
+header {
+ display: flex;
+ border-bottom: 10px solid #842167;
 }
 img {
   height: 150px;
@@ -50,7 +75,9 @@ ul {
 footer {
   margin-bottom: 0;
   display: inline-block;
-  margin-left: 15px;
+  border-top: 10px solid #842167;
+  width: 100%;
+  margin-top: 10px;
 }
 #one {
   margin-left: 800px;
