--- a/style.css
+++ b/style.css
@@ -1,44 +1,72 @@
+h2 {
+  text-align: center;
+  font-family: Charcoal sans-serif;
+  font-style: italic;
+  color: #DE0066;
+  text-decoration: underline;
+}
+
 #conteneur{
  display: flex;
  flex-direction: column;
  justify-content: space-around;
 }
+
 #primero {
   background-color: #E6D2E0;
   margin-bottom: 10px;
   border: 4px solid #842167;
   border-radius: 5px;
   margin-top: 10px;
-  display: flex;
+  display:flex;
   text-decoration:none;
   color: black;
   margin-top: 20px;
 }
+
+#primero ul {
+  display: block;
+}
+
 #segundo {
   background-color: #E6D2E0;
   margin-bottom: 10px;
   border: 4px solid #842167;
   border-radius: 5px;
+  display:flex;
   text-decoration:none;
   color: black;
 }
+
+#segundo ul {
+  display: block;
+}
+
 #tercero {
   background-color: #E6D2E0;
   margin-bottom: 10px;
   border: 4px solid #842167;
   border-radius: 5px;
+  display:flex;
   text-decoration:none;
   color: black;
 }
+
+#tercero ul {
+  display: block;
+}
+
 header {
  display: flex;
  border-bottom: 10px solid #842167;
 }
+
 img {
   height: 150px;
   width: 250px;
   display: flex;
 }
+
 #myInput {
   margin-left: 80px;
   height: 30px;
@@ -48,30 +76,36 @@ img {
   background-color: #DDDDDD;
   margin-top: 50px;
 }
+
 #search {
   height: 25px;
   width: 25px;
   margin-top: 57px;
 }
+
 div {
   float: right;
 }
+
 ul {
   list-style-type: none;
   display: flex;
 }
+
 #truck {
   height: 30px;
   width: 30px;
   margin-top: 15px;
   margin-left: 220px;
 }
+
 #return {
   height: 30px;
   width: 30px;
   margin-top: 15px;
   margin-left: 20px;
 }
+
 footer {
   margin-bottom: 0;
   display: inline-block;
@@ -79,6 +113,7 @@ footer {
   width: 100%;
   margin-top: 10px;
 }
+
 #one {
   margin-left: 800px;
 }
