--- a/style2.css
+++ b/style2.css
@@ -9,6 +9,7 @@ img {
   width: 400px;
   margin-top: 60px;
   margin-left: 30px;
+  display: inline-block;
 }
 
 #myInput {
@@ -49,4 +50,73 @@ img {
 header {
  display: flex;
  border-bottom: 10px solid #842167;
+}
+
+button {
+  background-color: #842167;
+  width: 150px;
+  height: 50px;
+  color: white;
+  font-weight: bold;
+  border: 2px;
+  border-radius: 5px;
+  margin-left: 170px;
+  text-align: center;
+}
+
+#first {
+  display: inline-block;
+}
+
+#one {
+  display: inline-block;
+  width: 400px;
+  background-color: #DDDDDD;
+  margin-left: 100px;
+  border: 4px solid #842167;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+#one p {
+  font-weight: bold;
+}
+
+#first {
+  color: green;
+  font-style: italic;
+}
+
+#two {
+  background-color: #DDDDDD;
+  font-family: Verdana;
+  border: 4px solid #842167;
+  border-radius: 5px;
+  width: 700px;
+  display: inline-block;
+  margin-left: 50px;
+}
+
+h3 {
+  font-style: italic;
+  margin-left: 120px;
+}
+
+#three {
+  border: 4px solid #842167;
+  border-radius: 5px;
+  background-color: #DDDDDD;
+  display: inline-block;
+  float: right;
+  width: 400px;
+  height: 400px;
+  margin-right: 50px;
+}
+
+table {
+border-collapse: collapse;
+}
+
+td {
+    border: 1px solid black;
 }
