--- a/style2.css
+++ b/style2.css
@@ -72,10 +72,9 @@ button {
   display: inline-block;
   width: 400px;
   background-color: #DDDDDD;
-  margin-left: 100px;
+  margin-left: 150px;
   border: 4px solid #842167;
   border-radius: 5px;
-  display: inline-block;
 }
 
 #one p {
@@ -133,5 +132,9 @@ footer {
 
 #contact {
   margin-left: 800px;
+  margin-right: 20px;
+}
+
+footer a {
   color: #9F2F8B;
 }
