--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
+/*BODY*/
 h2 {
   text-align: center;
-  font-family: Charcoal sans-serif;
   font-style: italic;
   color: #DE0066;
   text-decoration: underline;
@@ -24,10 +24,6 @@ h2 {
   margin-top: 20px;
 }
 
-#primero ul {
-  display: block;
-}
-
 #segundo {
   background-color: #E6D2E0;
   margin-bottom: 10px;
@@ -36,10 +32,6 @@ h2 {
   display:flex;
   text-decoration: none;
   color: black;
-}
-
-#segundo ul {
-  display: block;
 }
 
 #tercero {
@@ -52,16 +44,14 @@ h2 {
   color: black;
 }
 
-#tercero ul {
-  display: block;
-}
-
 .list{
   margin-left: 100px;
+  width: 380px;
 }
 
 .name {
   margin-left: 50px;
+  width: 210px;
 }
 
 em {
@@ -75,15 +65,16 @@ em {
   font-size: 18px;
 }
 
+/* HEADER */
 header {
- display: flex;
- border-bottom: 10px solid #842167;
+  display: inline-block;
+  border-bottom: 10px solid #842167;
 }
 
 img {
   height: 150px;
   width: 250px;
-  display: flex;
+  display: inline-block;
 }
 
 #myInput {
@@ -93,29 +84,37 @@ img {
   border-radius: 12px;
   border: 2px solid #842167;
   background-color: #DDDDDD;
-  margin-top: 50px;
+  display: inline-block;
+  margin-top: 0;
 }
 
 #search {
   height: 25px;
   width: 25px;
-  margin-top: 57px;
+  margin-top: 60px;
 }
 
 div {
-  float: right;
+  height: 30px;
+  display: inline-block;
+  width: 600px;
+  margin-top: 0;
+}
+
+div ul li {
+  display: inline-block;
 }
 
 #header {
   list-style-type: none;
-  display: flex;
+  display: inline-block;
 }
 
 #truck {
   height: 30px;
   width: 30px;
   margin-top: 15px;
-  margin-left: 220px;
+  margin-left: 50px;
 }
 
 #return {
@@ -125,6 +124,53 @@ div {
   margin-left: 20px;
 }
 
+/* MENU DEROULANT HEADER*/
+nav {
+  margin-top: 70px;
+  width: 500px;
+  display: inline-block;
+  float: right;
+}
+
+nav ul li {
+  display: inline-block;
+}
+
+nav ul {
+  width: 100%;
+}
+
+nav a {
+  text-decoration: none;
+  text-align:center;
+  padding:5px;
+  border:2px solid;
+}
+
+nav ul ul {
+  display: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+}
+
+
+nav ul ul li {
+  margin: 8px;
+  width: 200px;
+}
+
+nav li {
+  list-style-type: none;
+  margin-left:2px;
+  position: relative;
+}
+
+nav li:hover ul, li li:hover ul {
+  display: block;
+}
+
+/* FOOTER */
 footer {
   margin-bottom: 0;
   display: inline-block;
