--- a/style.css
+++ b/style.css
@@ -130,7 +130,6 @@ nav {
   width: 500px;
   display: inline-block;
   float: right;
-  color : #551A8B;
 }
 
 nav ul li {
@@ -145,7 +144,7 @@ nav a {
   text-decoration: none;
   text-align:center;
   padding:5px;
-  border:2px solid;
+  border:2px solid #842167;
 }
 
 nav ul ul {
